toList fix